--- a/src/weatherSite/weatherApp/templates/weatherApp/weather.html
+++ b/src/weatherSite/weatherApp/templates/weatherApp/weather.html
@@ -12,7 +12,7 @@
         <div id="weatherApp">
             <div v-if="currWeatherData && forecastData" class="row">
                 <div class="jumbotron">
-                    <h1 class="display-4">Crowd-source the Forecast</h1>
+                    <h1 class="display-4">Crowd-Source the Forecast</h1>
                     <p class="lead">Vote on whether you think the forecast is</p>
                     <ul class="list-group">
                         <li class="list-group-item" style="color:#32CD32">Likely: [% votes.likely %]</li>
