Added a nice weather picture.

--- a/src/weatherSite/weatherApp/static/weatherApp/style.css
+++ b/src/weatherSite/weatherApp/static/weatherApp/style.css
@@ -10,3 +10,10 @@
 
 .default {
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
+}
