--- a/src/weatherSite/weatherApp/templates/weatherApp/weather.html
+++ b/src/weatherSite/weatherApp/templates/weatherApp/weather.html
@@ -20,6 +20,9 @@
                         <li class="list-group-item">Uncertain: [% votes.default %]</li>
                     </ul>
                     <p>Click on a forecast to cast your vote</p>
+                    <div class="center">
+                        <img src="{% static 'weatherApp/weather.png' %}"/>
+                    </div>
                 </div>
                 <!--Current weather-->
                 <div class="col-md" id="currentWeather">
